[gd_scene load_steps=20 format=3 uid="uid://bky1fxhtd5kg7"]

[ext_resource type="Script" uid="uid://t8qpmwtjkx3j" path="res://core/interface/hud/stats_bar/StatsBar.gd" id="1_1cjgp"]
[ext_resource type="Texture2D" uid="uid://btnuubbiilyo4" path="res://assets/celestia/interface/hud/stats_bar/background.png" id="1_5lu1f"]
[ext_resource type="Texture2D" uid="uid://b3xcheqxbydlw" path="res://assets/celestia/interface/hud/stats_bar/vessel.png" id="3_l7w1x"]
[ext_resource type="Texture2D" uid="uid://cl3twyd33shnf" path="res://assets/celestia/interface/hud/stats_bar/heart.png" id="4_jl1u8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_abe2h"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jo12g"]
bg_color = Color(0.905882, 0.156863, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5lu1f"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1cjgp"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pimi0"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c5cyb"]
bg_color = Color(0.23978, 0.442944, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjip1"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rjk5h"]
bg_color = Color(0.813229, 0.532719, 9.62615e-07, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_jo12g"]
atlas = ExtResource("4_jl1u8")
region = Rect2(0, 11, 12, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_pimi0"]
atlas = ExtResource("4_jl1u8")
region = Rect2(12, 11, 12, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5cyb"]
atlas = ExtResource("4_jl1u8")
region = Rect2(24, 11, 12, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjip1"]
atlas = ExtResource("4_jl1u8")
region = Rect2(0, 0, 12, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjk5h"]
atlas = ExtResource("4_jl1u8")
region = Rect2(12, 0, 12, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqn0w"]
atlas = ExtResource("4_jl1u8")
region = Rect2(24, 0, 12, 11)

[sub_resource type="SpriteFrames" id="SpriteFrames_23r18"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jo12g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pimi0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5cyb")
}],
"loop": false,
"name": &"death",
"speed": 2.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjip1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjk5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqn0w")
}],
"loop": true,
"name": &"pulse",
"speed": 5.0
}]

[node name="StatsBar" type="Node2D"]
scale = Vector2(3.5, 3.5)
script = ExtResource("1_1cjgp")

[node name="Background" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(52.7143, -14.2143)
scale = Vector2(1.2, 1.2)
texture = ExtResource("1_5lu1f")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 26.4286
offset_top = -21.2857
offset_right = 76.4286
offset_bottom = -19.2857
theme_override_styles/background = SubResource("StyleBoxFlat_abe2h")
theme_override_styles/fill = SubResource("StyleBoxFlat_jo12g")
value = 50.0
show_percentage = false

[node name="PrevHealthBar" type="ProgressBar" parent="HealthBar"]
z_index = -1
layout_mode = 0
offset_left = 0.14283
offset_top = 0.142841
offset_right = 50.1428
offset_bottom = 2.14284
theme_override_styles/background = SubResource("StyleBoxFlat_5lu1f")
theme_override_styles/fill = SubResource("StyleBoxFlat_1cjgp")
value = 50.0
show_percentage = false

[node name="HealthTimer" type="Timer" parent="HealthBar"]
one_shot = true

[node name="ManaBar" type="ProgressBar" parent="."]
offset_left = 26.4286
offset_top = -15.0
offset_right = 76.4286
offset_bottom = -13.0
theme_override_styles/background = SubResource("StyleBoxFlat_pimi0")
theme_override_styles/fill = SubResource("StyleBoxFlat_c5cyb")
value = 50.0
show_percentage = false

[node name="PrevManaBar" type="ProgressBar" parent="ManaBar"]
z_index = -1
layout_mode = 0
offset_left = 0.142826
offset_top = -0.142856
offset_right = 50.1428
offset_bottom = 1.85715
theme_override_styles/background = SubResource("StyleBoxFlat_5lu1f")
theme_override_styles/fill = SubResource("StyleBoxFlat_1cjgp")
value = 50.0
show_percentage = false

[node name="ManaTimer" type="Timer" parent="ManaBar"]
one_shot = true

[node name="HungryBar" type="ProgressBar" parent="."]
offset_left = 26.0
offset_top = -9.14286
offset_right = 74.0
offset_bottom = -7.14286
theme_override_styles/background = SubResource("StyleBoxFlat_sjip1")
theme_override_styles/fill = SubResource("StyleBoxFlat_rjk5h")
max_value = 50.0
value = 25.0
show_percentage = false

[node name="Vessel" type="Sprite2D" parent="."]
position = Vector2(30.5, -16.2857)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_l7w1x")

[node name="AnimatedHeart" type="AnimatedSprite2D" parent="."]
position = Vector2(15.4286, -15.7143)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_23r18")
animation = &"pulse"
autoplay = "pulse"
frame_progress = 0.872027

[connection signal="timeout" from="HealthBar/HealthTimer" to="." method="_on_health_timer_timeout"]
[connection signal="timeout" from="ManaBar/ManaTimer" to="." method="_on_mana_timer_timeout"]
